@@ -25,7 +25,6 @@ import java.io.IOException;
  * Represents a directive from the {@link org.apache.hama.bsp.BSPMaster} 
  * to the {@link org.apache.hama.bsp.GroomServer} to commit the output
  * of the task.
- * 
  */
 class CommitTaskAction extends GroomServerAction {
   private TaskAttemptID taskId;
