@@ -27,7 +27,7 @@ import org.apache.hadoop.io.WritableFactories;
 import org.apache.hadoop.io.WritableFactory;
 
 /**
- * A JobProfile tracks job's status
+ * A JobProfile tracks job's status.
  */
 public class JobProfile implements Writable {
 
