@@ -30,7 +30,6 @@ import org.apache.hadoop.io.WritableUtils;
 /**
  * Describes the current status of a task. This is not intended to be a
  * comprehensive piece of data.
- * 
  */
 class TaskStatus implements Writable, Cloneable {
   static final Log LOG = LogFactory.getLog(TaskStatus.class);
